feat: 검색바 디자인 추가
- header 양 옆 공백 살짝 증가

--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 header {
     height: 2em;
     background-color: var(--blue);
-    padding: .5em .5em .5em .5em;
+    padding: .5em 1em .5em 1em;
 
     display: flex;
     justify-content: center;
