--- a/index.css
+++ b/index.css
@@ -22,9 +22,25 @@ p {
     margin: 0;
 }
 
-.box, input[type='text'] {
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.box, input[type='text'], button {
     border: 1px solid var(--border-color);
     border-radius: 5px;
+}
+
+button {
+    border: none;
+    background-color: var(--blue);
+    color: var(--white);
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 input[type='text'] {
