feat: footer 디자인 추가
- 콘텐츠가 부족해 footer가 바닥에 붙지 않는 현상
  - header와 main을 감싸 footer가 바닥에 붙어있을 수 있도록 최소 높이를 조정

--- a/index.css
+++ b/index.css
@@ -12,9 +12,19 @@
     --width: 800px;
 }
 
+html, body {
+    min-height: 100vh;
+}
+
 body {
     margin: 0;
     color: var(--black);
+}
+
+.wrap {
+    min-height: calc(100vh - 4.5em);
+    padding-bottom: .5em;
+    height: 100%;
 }
 
 p {
