--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ main {
 main .box {
     width: calc(var(--width) - 2em);
     max-width: calc(100vw - 4em);
-    margin: 0 1em 0 1em;
+    margin-left: 1em;
+    margin-right: 1em;
     padding: 1em;
 }
