--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     gap: .5em;
+
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 .search-bar-description {
