--- a/css/repos.css
+++ b/css/repos.css
@@ -19,8 +19,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .repo-title {
     color: var(--blue);
+    font-size: 0.9em;
 }
