feat: repo box를 눌렀을 때 해당 repo로 이동하는 기능 구현
- 버블링을 막음

- design: 상호작용 가능한 버튼에 호버 시 배경 변화 0.5s 애니메이션

--- a/css/repos.css
+++ b/css/repos.css
@@ -20,6 +20,13 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    transition: background-color 0.5s;
+}
+
+.repo:hover {
+    background-color: var(--skyblue);
+    cursor: pointer;
 }
 
 .repo-title {
