--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
     --footer-color: #f8f9fa;
     --border-color: #e4e4e4;
     --description-color: #9da4aa;
+    --skyblue: #ebf0fa;
 
     --width: 800px;
 }
