--- a/css/profile.css
+++ b/css/profile.css
@@ -14,7 +14,14 @@
     margin-top: 0.5em;
     padding: 0.75em;
     font-size: 0.75em;
+
+    transition: all 0.5s;
 }
+
+.view-profile-btn:hover {
+    opacity: 50%;
+}
+
 
 .profile-description {
     display: flex;
