--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -15,3 +15,57 @@
     font-weight: 800;
     font-size: 2em;
 }
+
+#searchUserInput {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.search-bar-section {
+    position: relative;
+}
+
+.search-result-list {
+    position: absolute;
+    width: 100%;
+    font-size: .8em;
+}
+
+.search-result-list img{
+    height: 2em;
+}
+
+.search-result-list li {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: .75em;
+
+    width: 100%;
+    box-sizing: border-box;
+    padding: .5em .75em .5em .75em;
+    
+    border: 1px solid var(--border-color);
+    transform: translateY(-1px);
+    border-bottom: none;
+    background-color: var(--white);
+    cursor: pointer;
+    transition: background-color 0.5s;
+}
+
+.search-result-list li:hover{
+    background-color: var(--skyblue);
+}
+
+.search-result-list li:first-child {
+    border-top-left-radius: .25em;
+    border-top-right-radius: .25em;
+}
+
+.search-result-list li:last-child {
+    border-bottom: 1px solid var(--border-color);
+    border-bottom-left-radius: .25em;
+    border-bottom-right-radius: .25em;
+}
