--- a/css/profile.css
+++ b/css/profile.css
@@ -14,12 +14,15 @@
     margin-top: 0.5em;
     padding: 0.75em;
     font-size: 0.75em;
+}
 
+.view-profile-btn, .profile-image {
     transition: all 0.5s;
 }
 
-.view-profile-btn:hover {
+.view-profile-btn:hover, .profile-image:hover {
     opacity: 50%;
+    cursor: pointer;
 }
 
 
